Refactor Service.java for cleaner code and imports